@@ -1,3 +1,8 @@
+2006-12-28  Brian Bidulock  <bidulock@openss7.org>
+
+	* src/modules/m2ua_as.c: convert to SVR4 basic locks
+	* src/modules/m3ua_as.c: comment
+
 2006-12-23  Brian Bidulock  <bidulock@openss7.org>
 
 	* acinclude.m4: corrected manpage paths and includes
